k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: dftp-mcp
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: 254800774891.dkr.ecr.us-east-2.amazonaws.com/dftp-mcp/auth-service:latest
        ports:
        - containerPort: 8280
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: dftp-mcp
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 8280
      targetPort: 8280
  type: ClusterIP
