k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dftp-mcp
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend-sa
      containers:
      - name: backend
        image: 254800774891.dkr.ecr.us-east-2.amazonaws.com/dftp-mcp/backend:latest
        ports:
        - containerPort: 8060
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dftp-mcp
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8060
      targetPort: 8060
  type: ClusterIP
